# python-plugin-system

./: README.md  pyproject.toml
poc_plugin/: __init__.py  __main__.py
poc_plugin/plugin/: __init__.py  base.py  validator.py
poc_plugin/types/: __init__.py  cli.py  plugins.py
poc_plugin/variables/: __init__.py  cli.py  plugin.py
