[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "poc-plugin"
authors = [{ name = "temkuz", email = "temkuz@yandex.ru" }]
version = "1.0.0"
description = "SOME DESCRIPTION"
readme="README.md"

requires-python = ">=3.11"
keywords = []
dependencies = []

[project.scripts]
poc_plugin = "poc_plugin.__init__:main"